[gd_scene load_steps=21 format=2]

[ext_resource path="res://ressources/Player/IdleUp.png" type="Texture" id=1]
[ext_resource path="res://ressources/Player/IdleLeft.png" type="Texture" id=2]
[ext_resource path="res://ressources/Player/MoveUp.png" type="Texture" id=3]
[ext_resource path="res://ressources/Player/MoveDown.png" type="Texture" id=4]
[ext_resource path="res://ressources/Player/MoveLeft.png" type="Texture" id=5]
[ext_resource path="res://ressources/Player/IdleDown.png" type="Texture" id=6]
[ext_resource path="res://ressources/Player/IdleRight.png" type="Texture" id=7]
[ext_resource path="res://ressources/Player/MoveRight.png" type="Texture" id=8]
[ext_resource path="res://script/Entity/Character.gd" type="Script" id=9]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "IdleDown",
"speed": 25.0
}, {
"frames": [ SubResource( 2 ) ],
"loop": true,
"name": "IdleLeft",
"speed": 25.0
}, {
"frames": [ SubResource( 3 ) ],
"loop": true,
"name": "IdleRight",
"speed": 25.0
}, {
"frames": [ SubResource( 4 ) ],
"loop": true,
"name": "IdleUp",
"speed": 25.0
}, {
"frames": [ SubResource( 5 ) ],
"loop": true,
"name": "MoveDown",
"speed": 5.0
}, {
"frames": [ SubResource( 6 ) ],
"loop": true,
"name": "MoveLeft",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ) ],
"loop": true,
"name": "MoveRight",
"speed": 5.0
}, {
"frames": [ SubResource( 8 ) ],
"loop": true,
"name": "MoveUp",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 16, 16 )

[sub_resource type="CapsuleShape2D" id=11]
radius = 8.26237

[node name="Character" type="KinematicBody2D"]
scale = Vector2( 1, 0.992112 )
script = ExtResource( 9 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 9 )
animation = "IdleDown"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 10 )

[node name="InteractionBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionBox"]
position = Vector2( 0, 25 )
rotation = 1.5708
shape = SubResource( 11 )

[node name="Camera2D" type="Camera2D" parent="."]
rotating = true
current = true
zoom = Vector2( 0.9, 0.9 )

[connection signal="facing_direction_changed" from="." to="." method="_on_facing_direction_changed"]
[connection signal="moving_direction_changed" from="." to="." method="_on_moving_direction_changed"]
[connection signal="state_changed" from="." to="." method="_on_state_changed"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="InteractionBox" to="." method="_on_interactionBox_body_entered"]
